gitops/apps/tasklist/kustomize/base/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasklist-backend
  labels:
    app: tasklist-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasklist-backend
  template:
    metadata:
      labels:
        app: tasklist-backend
    spec:
      containers:
        - name: backend
          image: localhost:30500/tasklist-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
