gitops/apps/tasklist/kustomize/base/deployment-celery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasklist-celery
  labels:
    app: tasklist-celery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasklist-celery
  template:
    metadata:
      labels:
        app: tasklist-celery
    spec:
      containers:
        - name: celery
          image: localhost:30500/tasklist-backend:latest
          imagePullPolicy: IfNotPresent
          command: ["celery", "-A", "celery_worker.celery_app", "worker", "--loglevel=info"]
