gitops/apps/tasklist/kustomize/base/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasklist-frontend
  labels:
    app: tasklist-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasklist-frontend
  template:
    metadata:
      labels:
        app: tasklist-frontend
    spec:
      containers:
        - name: frontend
          image: tasklist-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
