gitops/apps/tasklist/kustomize/base/deployment-rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasklist-rabbitmq
  labels:
    app: tasklist-rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasklist-rabbitmq
  template:
    metadata:
      labels:
        app: tasklist-rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5672
            - containerPort: 15672
          volumeMounts:
            - name: rabbitmq-storage
              mountPath: /var/lib/rabbitmq
      volumes:
        - name: rabbitmq-storage
          persistentVolumeClaim:
            claimName: tasklist-rabbitmq-pvc
