gitops/apps/tasklist/kustomize/base/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasklist-backend
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: tasklist-backend
