gitops/apps/tasklist/kustomize/base/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasklist-frontend
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: tasklist-frontend
