gitops/apps/tasklist/kustomize/base/service-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasklist-mongo
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: tasklist-mongo
