gitops/apps/tasklist/kustomize/base/service-rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasklist-rabbitmq
spec:
  type: ClusterIP
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
  selector:
    app: tasklist-rabbitmq
